# technical-assessment-brsk

scrabble_replace_simple_django/: .gitignore  README.md  pyproject.toml  requirements.txt
scrabble_replace_simple_django/scrabble_replace/: manage.py
scrabble_replace_simple_django/scrabble_replace/api/: apps.py  models.py  urls.py  utils.py  views.py
scrabble_replace_simple_django/scrabble_replace/api/management/commands/: load_words.py
scrabble_replace_simple_django/scrabble_replace/api/tests/: test_api.py
scrabble_replace_simple_django/scrabble_replace/core/: replace_words.py
scrabble_replace_simple_django/scrabble_replace/core/tests/: test_replace_words.py
scrabble_replace_simple_django/scrabble_replace/scrabble_replace/: asgi.py  settings.py  urls.py  wsgi.py
scrabble_replace_simple_python/: README.md  scrabble_replace.py  test_cli_lines_proof.txt  utils.py
